# unabbreviated-rust

./: LICENSE-APACHE  LICENSE-MIT  README.md
crates/example/: Cargo.toml
crates/example/src/: cursed.rs  main.rs
crates/unabbreviated/: Cargo.toml
crates/unabbreviated-rust/: Cargo.toml
crates/unabbreviated/src/: lib.rs
